# server.js
@@ -5,20 +5,25 @@ const port = process.env.PORT || 8080;
 const routes = require('./routes');
 const spills = require('./routes/spills');
 const workers = require('./routes/workers');
+const managers = require('./routes/managers');
+const summaries = require('./routes/summaries');
 const bodyParser = require('body-parser');
 const swaggerRoute = require('./routes/swagger');
 const cors = require('cors');
+const passport = require('passport');
+const session = require('express-session'); // Import express-session
+const GitHubStrategy = require('passport-github2').Strategy;
+const dotenv = require('dotenv');
 
 // Middleware
 app.use(bodyParser.json());
-// Commenting out session and passport as they're related to OAuth
-// app.use(session({
-//   secret: "secret",
-//   resave: false,
-//   saveUninitialized: true,
-// }));
-// app.use(passport.initialize());
-// app.use(passport.session());
+app.use(session({
+  secret: "secret",
+  resave: false,
+  saveUninitialized: true,
+}));
+app.use(passport.initialize());
+app.use(passport.session());
 app.use((req, res, next) => {
   res.setHeader('Access-Control-Allow-Headers',
   'Origin, X-Requested-With, Content-Type, Accept, Z-Key'
@@ -29,37 +34,39 @@ app.use((req, res, next) => {
 app.use(cors({origin: ['GET', 'POST', 'DELETE', 'UPDATE', 'PUT', 'PATCH']}));
 app.use(cors({origin: '*'}));
 
-// Commenting out OAuth related code
-// passport.use(new GitHubStrategy({
-//   clientID: process.env.GITHUB_CLIENT_ID,
-//   clientSecret: process.env.GITHUB_CLIENT_SECRET,
-//   callbackURL: process.env.CALLBACK_URL 
-// },
-//   function(accessToken, refreshToken, profile, done) {
-//     return done(null, profile);
-// }));
 
-// passport.serializeUser((user, done) => {
-//   done(null, user);
-// });
-// passport.deserializeUser((user, done) => { 
-//   done(null, user);
-// });
+passport.use(new GitHubStrategy({
+  clientID: process.env.GITHUB_CLIENT_ID,
+  clientSecret: process.env.GITHUB_CLIENT_SECRET,
+  callbackURL: process.env.CALLBACK_URL 
+},
+  function(accessToken, refreshToken, profile, done) {
+    return done(null, profile);
+}));
 
-// app.get('/', (req, res) => {res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : 'Logged Out')});
+passport.serializeUser((user, done) => {
+  done(null, user);
+});
+passport.deserializeUser((user, done) => { 
+  done(null, user);
+});
 
-// app.get('/github/callback', passport.authenticate('github', {
-//   failureRedirect: '/api_docs', session: false}),
-//   (req, res) => {
-//     req.session.user = req.user;
-//     res.redirect('/');
-// });
+app.get('/', (req, res) => {res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : 'Logged Out')});
+
+app.get('/github/callback', passport.authenticate('github', {
+  failureRedirect: '/api_docs', session: false}),
+  (req, res) => {
+    req.session.user = req.user;
+    res.redirect('/');
+});
 
 // Routes
 app.use('/', routes);
 app.use('/spills', spills);
 app.use('/workers', workers);
 app.use('/api-docs', swaggerRoute);
+app.use('/managers', managers);
+app.use('/summaries', summaries);
 
 // Error handling middleware
 app.use((err, req, res, next) => {
@@ -75,3 +82,5 @@ mongodb.initDb((err) => {
     app.listen(port, () => {console.log(`Database is listening and node is running on localhost:${port}`)})
   }
 });
+
+module.exports = app;
